--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Zoltare
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -13,19 +13,24 @@ APP_MAINTENANCE_DRIVER=file
 
 # PHP_CLI_SERVER_WORKERS=4
 
+DB_CONNECTION=mongodb
+MONGODB_HOST=127.0.0.1
+MONGODB_PORT=27017
+MONGODB_DATABASE=Zoltare
+MONGODB_URI=
+# MySQL
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=zoltare
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=zoltare
-DB_USERNAME=root
-DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
